--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=dev
 PORT=3003
 
-MONGODB_URI=mongodb://127.0.0.1:27017/comix
+MONGODB_URI=mongodb://127.0.0.1:27017/crawler
 
 REDIS_URI=redis://localhost:6379
 REDIS_HOST=127.0.0.1
