--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.8",
+    "@nestjs/bull": "^0.5.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.1",
     "@nestjs/core": "^8.0.0",
@@ -30,18 +31,24 @@
     "@nestjs/microservices": "^8.4.5",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.1.0",
+    "@types/sharp": "^0.30.2",
+    "bull": "^4.8.3",
     "cheerio": "^1.0.0-rc.10",
     "mongoose-autopopulate": "^0.16.1",
     "mongoose-slug-generator": "^1.0.4",
     "nats": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sharp": "^0.30.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.8",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
@@ -68,6 +75,11 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^@shared/(.*)$": "<rootDir>/shared/$1",
+      "^@schema/(.*)$": "<rootDir>/schema/$1",
+      "^@database/(.*)$": "<rootDir>/database/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
