--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "nats:start": "nats-streaming-server",
@@ -24,14 +24,15 @@
   "dependencies": {
     "@nestjs/axios": "^0.0.8",
     "@nestjs/bull": "^0.5.5",
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.4.5",
     "@nestjs/config": "^2.0.1",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^8.4.5",
+    "@nestjs/event-emitter": "^1.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^8.4.5",
     "@nestjs/mongoose": "^9.0.3",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/schedule": "^2.0.1",
     "@types/sharp": "^0.30.2",
     "bull": "^4.8.3",
     "cheerio": "^1.0.0-rc.10",
@@ -78,7 +79,8 @@
     "moduleNameMapper": {
       "^@shared/(.*)$": "<rootDir>/shared/$1",
       "^@schema/(.*)$": "<rootDir>/schema/$1",
-      "^@database/(.*)$": "<rootDir>/database/$1"
+      "^@database/(.*)$": "<rootDir>/database/$1",
+      "^@site/(.*)$": "<rootDir>/site/$1"
     },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
