--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV=dev
 PORT=3003
 
-MONGODB_URI=mongodb://127.0.0.1:27017/crawler
+MONGODB_URI_CRAWLER=mongodb://127.0.0.1:27017/crawler
+MONGODB_URI_COMIX=mongodb://127.0.0.1:27017/comix
 
 REDIS_URI=redis://localhost:6379
 REDIS_HOST=127.0.0.1
